--- a/views/index2.html
+++ b/views/index2.html
@@ -42,10 +42,13 @@
         </ol>
         <br>
         <hr>
+        <a download="Lab01" href="https://cdn.gomix.com/ebe1c119-9c54-49eb-a75e-d64d15f8170a%2FLab01.docx">Howdy</a>
         <table style="text-align: center; margin-left: auto; margin-right: auto; ">
             <tr>
                 <td>
-                    <a download="Lab01.docx" href="https://cdn.gomix.com/ebe1c119-9c54-49eb-a75e-d64d15f8170a%2FLab01.docx"><input type='button' value='Download'></a>
+                    <a download="Lab01" href="https://cdn.gomix.com/ebe1c119-9c54-49eb-a75e-d64d15f8170a%2FLab01.docx"><input type='button' value='Download'></a>
+                    <input type="button" id="loadFileXml" value="Download2"
+                           onclick="doDownload()"/>
                 </td>
                 <td>
                     <div style="width:20px;">&nbsp;</div>
